Kubernetes/AgrOne/AgrOne-Prod/Keycloak-Prod/keycloak-prod-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-prod-db
  namespace: agrotech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-prod-db
  template:
    metadata:
      labels:
        app: keycloak-prod-db
    spec:
      containers:
        - name: keycloak-prod-db
          image: postgres
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-prod-db-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: keycloak-prod-db-storage
          persistentVolumeClaim:
            claimName: keycloak-prod-db-pvc
