Kubernetes/AgrOne/AgrOne-Prod/Keycloak-Prod/keycloak-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-prod
  namespace: agrotech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-prod
  template:
    metadata:
      labels:
        app: keycloak-prod
    spec:
      containers:
        - name: keycloak-prod
          image: quay.io/keycloak/keycloak
          args: ["start-dev"]
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
            - name: keycloak-prod-storage
              mountPath: /opt/jboss/keycloak-prod/standalone/data

      volumes:
        - name: keycloak-prod-storage
          persistentVolumeClaim:
            claimName: keycloak-prod-pvc
