Kubernetes/AgrOne/AgrOne-Prod/Keycloak-Prod/keycloak-prod-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak-prod-service
  namespace: agrotech-prod
spec:
  type: NodePort
  selector:
    app: keycloak-prod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
